--- a/backend/package.json
+++ b/backend/package.json
@@ -1,32 +1,22 @@
 {
   "name": "excel-file-manager-backend",
   "version": "1.0.0",
-  "description": "Backend API for Excel file management system",
+  "description": "Backend for Excel File Manager",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "echo 'No build step required for Node.js'"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
     "multer": "^1.4.5-lts.1",
-    "aws-sdk": "^2.1531.0",
-    "@supabase/supabase-js": "^2.39.3",
-    "xlsx": "^0.18.5",
-    "uuid": "^9.0.1",
-    "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "express-validator": "^7.0.1",
-    "compression": "^1.7.4",
-    "morgan": "^1.10.0"
+    "helmet": "^7.0.0",
+    "uuid": "^9.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.1"
   },
   "engines": {
     "node": ">=18.0.0"
