--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "multer": "^1.4.5-lts.1",
     "helmet": "^7.0.0",
     "uuid": "^9.0.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
