--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,18 +4,19 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "axios": "^1.6.2",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "jszip": "^3.10.1",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "react-query": "^3.39.3",
-    "axios": "^1.6.2",
-    "lucide-react": "^0.294.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
-    "date-fns": "^2.30.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
-    "jszip": "^3.10.1"
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.20.1",
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.45",
@@ -49,4 +50,4 @@
       "last 1 safari version"
     ]
   }
-} 
+}
