--- a/backend/package.json
+++ b/backend/package.json
@@ -9,13 +9,17 @@
     "build": "echo 'No build step required for Node.js'"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
+    "dotenv": "^17.2.1",
+    "exceljs": "^4.4.0",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
-    "uuid": "^9.0.0",
-    "xlsx": "^0.18.5",
-    "express-validator": "^7.0.1"
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.17.1",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
@@ -23,4 +27,4 @@
   "engines": {
     "node": ">=18.0.0"
   }
-} 
+}
