--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jszip": "^3.10.1",
     "helmet": "^7.0.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.1",
